2004-05-03  Jason Rumney  <jasonr@gnu.org>

	* makefile.nt: Remove.

2004-05-03  Kim F. Storm  <storm@cua.dk>

	* emulation/cua-base.el (cua--update-indications):
	Fix last change.
	(cua-mode): Deactivate mark when cua-mode is enabled.

2004-05-02  Luc Teirlinck  <teirllm@auburn.edu>

	* select.el (xselect-convert-to-string): Bind `inhibit-read-only'
	to t.

2004-05-03  Nick Roberts  <nickrob@gnu.org>

	* progmodes/gdb-ui.el (gud-watch, gdb-display-buffer)
	(gdb-display-source-buffer, gdb-put-breakpoint-icon)
	(gdb-remove-breakpoint-icons, gdb-assembler-custom): Look for
	window over visible frames.
	(gdb-goto-breakpoint): Make buffer display file at breakpoint.

2004-05-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/compile.el (compilation-gcpro): New var
	(compilation-fake-loc): Use it.
	(compilation-forget-errors): Reset it.

2004-05-02  Dan Nicolaescu  <dann@ics.uci.edu>

	* diff-mode.el (diff-header-face, diff-file-header-face):
	Use min-colors.

2004-05-02  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* textmodes/bibtex.el (bibtex-sort-buffer): Remove error message.
	(bibtex-clean-entry): Disentangle code.
	(bibtex-realign): New function.
	(bibtex-reformat): Use mapcar and bibtex-realign.  Do not use
	bibtex-beginning-of-first-entry and bibtex-skip-to-valid-entry.
	Remove undocumented optional arg called-by-convert-alien.
	(bibtex-convert-alien): Use bibtex-realign.  Use bibtex-reformat
	for sorting instead of bibtex-sort-buffer.

2004-05-02  Eli Zaretskii  <eliz@gnu.org>

	* progmodes/compile.el (compilation-start): In the
	no-async-subprocesses branch, call sit-for to give redisplay a
	chance to show the updated process status in the mode line, and
	fontify the buffer explicitly after the process exits.

2004-05-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/python.el (python-compilation-line-number): Remove.
	(python-compilation-regexp-alist): Don't use it any more.
	(python-orig-start, python-input-filter): Remove.