@@ -1,3 +1,8 @@
+2004-05-03  Jan D.  <jhd@gaffa.localdomain>
+
+	* term/x-win.el (x-clipboard-yank): Don't exit on error from
+	x-get-selection.
+
 2004-05-03  Jason Rumney  <jasonr@gnu.org>
 
 	* makefile.nt: Remove.
